data/derived/comb/progs/unify/prog5836.ml.out
Characters 72-73:
  (if (n mod 10) = 0 then n
                          ^
Error: This expression has type int but an expression was expected of type
         'a list
